# VINS-Fusion

config/d455/: cam_infra1.yaml  cam_infra1_highres.yaml  cam_infra2.yaml  cam_infra2_highres.yaml  cam_left_infra1_highres.yaml  cam_left_infra1_lowres.yaml  cam_left_infra2_highres.yaml  cam_left_infra2_lowres.yaml  cam_right_infra1_highres.yaml  cam_right_infra1_lowres.yaml  cam_right_infra2_highres.yaml  cam_right_infra2_lowres.yaml  stereo_imu_config.yaml  stereo_imu_config_highres.yaml  stereo_imu_config_highres_multi10.yaml  stereo_imu_config_highres_multi15.yaml  stereo_imu_config_highres_multi25.yaml  stereo_imu_config_highres_multi5.yaml  stereo_imu_config_highres_onewheel.yaml  stereo_imu_config_lowres_multi10.yaml  stereo_imu_config_lowres_multi15.yaml  stereo_imu_config_lowres_multi25.yaml  stereo_imu_config_lowres_multi5.yaml  stereo_imu_config_scan.yaml  stereo_imu_config_tmpl.yaml
global_fusion/src/: globalOptNode.cpp
loop_fusion/src/: keyframe.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: vins_loop.launch  vins_loop_global.launch  vins_loop_global_highres.launch  vins_loop_highres.launch
vins_estimator/src/: gps_sync.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_encoder_factor.h  integration_base.h
vins_estimator/src/initial/: initial_aligment.cpp
vins_estimator/src/utility/: visualization.cpp  visualization.h
